--- a/.github/workflows/generate-reports.yml
+++ b/.github/workflows/generate-reports.yml
@@ -203,9 +203,18 @@ jobs:
           for report in reports/**/combined_jira_report_*.tsv; do
             if [ -f "$report" ]; then
               echo "Generating prompt for: $report"
+
+              # Extract directory from report path and determine output directory
+              # e.g., reports/jira/combined_jira_report_*.tsv -> reports/prompts
+              # e.g., reports/team-a/jira/combined_jira_report_*.tsv -> reports/team-a/prompts
+              report_dir=$(dirname "$report")
+              output_dir="${report_dir%/*}/prompts"  # Remove last component (jira) and add prompts
+
+              echo "  Output directory: $output_dir"
               python -m impactlens.scripts.analyze_with_claude_code \
                 --report "$report" \
-                --prompt-only || echo "Warning: Failed to generate prompt for $report"
+                --prompt-only \
+                --output-dir "$output_dir" || echo "Warning: Failed to generate prompt for $report"
             fi
           done
 
@@ -213,9 +222,18 @@ jobs:
           for report in reports/**/combined_pr_report_*.tsv; do
             if [ -f "$report" ]; then
               echo "Generating prompt for: $report"
+
+              # Extract directory from report path and determine output directory
+              # e.g., reports/github/combined_pr_report_*.tsv -> reports/prompts
+              # e.g., reports/team-a/github/combined_pr_report_*.tsv -> reports/team-a/prompts
+              report_dir=$(dirname "$report")
+              output_dir="${report_dir%/*}/prompts"  # Remove last component (github) and add prompts
+
+              echo "  Output directory: $output_dir"
               python -m impactlens.scripts.analyze_with_claude_code \
                 --report "$report" \
-                --prompt-only || echo "Warning: Failed to generate prompt for $report"
+                --prompt-only \
+                --output-dir "$output_dir" || echo "Warning: Failed to generate prompt for $report"
             fi
           done
 
