--- a/.github/workflows/generate-reports.yml
+++ b/.github/workflows/generate-reports.yml
@@ -250,82 +250,13 @@ jobs:
             reports/**/*.txt
           retention-days: 30
 
-      - name: Collect Report Statistics
+      - name: Report Statistics and PR Comment
         if: steps.check_files.outputs.skip != 'true' || github.event_name != 'pull_request'
-        id: report_stats
-        run: |
-          # Count different types of files
-          JSON_COUNT=$(find reports -name "*.json" -type f 2>/dev/null | wc -l)
-          COMPARISON_COUNT=$(find reports -name "*comparison*.tsv" -type f 2>/dev/null | wc -l)
-          COMBINED_COUNT=$(find reports -name "*combined*.tsv" -type f 2>/dev/null | wc -l)
-          TOTAL_TSV=$(find reports -name "*.tsv" -type f 2>/dev/null | wc -l)
-          PROMPT_COUNT=$(find reports -name "analysis_prompt_*.txt" -type f 2>/dev/null | wc -l)
-
-          echo "json_count=$JSON_COUNT" >> $GITHUB_OUTPUT
-          echo "comparison_count=$COMPARISON_COUNT" >> $GITHUB_OUTPUT
-          echo "combined_count=$COMBINED_COUNT" >> $GITHUB_OUTPUT
-          echo "total_tsv=$TOTAL_TSV" >> $GITHUB_OUTPUT
-          echo "prompt_count=$PROMPT_COUNT" >> $GITHUB_OUTPUT
-
-          echo "Report statistics:"
-          echo "  JSON files: $JSON_COUNT"
-          echo "  Comparison TSV files: $COMPARISON_COUNT"
-          echo "  Combined TSV files: $COMBINED_COUNT"
-          echo "  Total TSV files: $TOTAL_TSV"
-          echo "  Analysis prompts: $PROMPT_COUNT"
-
-      - name: Comment on PR - Success
-        if: github.event_name == 'pull_request' && success() && steps.check_files.outputs.skip != 'true'
-        continue-on-error: true
-        env:
-          GOOGLE_SPREADSHEET_ID: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
-          JSON_COUNT: ${{ steps.report_stats.outputs.json_count }}
-          COMPARISON_COUNT: ${{ steps.report_stats.outputs.comparison_count }}
-          COMBINED_COUNT: ${{ steps.report_stats.outputs.combined_count }}
-          TOTAL_TSV: ${{ steps.report_stats.outputs.total_tsv }}
-          PROMPT_COUNT: ${{ steps.report_stats.outputs.prompt_count }}
-        uses: actions/github-script@v7
+        uses: ./.github/actions/report-comment
         with:
-          script: |
-            const spreadsheetId = process.env.GOOGLE_SPREADSHEET_ID;
-            const sheetsUrl = spreadsheetId
-              ? `https://docs.google.com/spreadsheets/d/${spreadsheetId}`
-              : null;
-
-            const jsonCount = process.env.JSON_COUNT || '0';
-            const comparisonCount = process.env.COMPARISON_COUNT || '0';
-            const combinedCount = process.env.COMBINED_COUNT || '0';
-            const totalTsv = process.env.TOTAL_TSV || '0';
-            const promptCount = process.env.PROMPT_COUNT || '0';
-
-            const artifactsUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
-
-            let body = '## ✅ Reports Generated Successfully\n\n';
-
-            // File statistics
-            body += `📊 **Generated**: ${jsonCount} JSON | ${totalTsv} TSV (${comparisonCount} comparison + ${combinedCount} combined)`;
-
-            // Links
-            if (sheetsUrl) {
-              body += ` | [View in Google Sheets](${sheetsUrl})`;
-            }
-            body += ` | [Download All Files](${artifactsUrl})\n\n`;
-
-            // AI Analysis prompts
-            if (parseInt(promptCount) > 0) {
-              body += `🤖 **AI Analysis Ready**: ${promptCount} analysis prompt(s) generated | [Download Prompts](${artifactsUrl})\n\n`;
-              body += '> 💡 **Tip**: Copy any prompt file and paste into Claude, ChatGPT, or Gemini to get instant insights!\n\n';
-            }
-
-            body += '---\n\n';
-            body += '⚠️ **Important**: ❌ DO NOT MERGE - 🔒 Manually close this PR after reviewing reports\n';
-
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            });
+          reports_dir: 'reports'
+          google_spreadsheet_id: ${{ secrets.GOOGLE_SPREADSHEET_ID }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment on PR - Failure
         if: github.event_name == 'pull_request' && failure() && steps.check_files.outputs.skip != 'true'
