--- a/.github/workflows/generate-reports.yml
+++ b/.github/workflows/generate-reports.yml
@@ -51,13 +51,21 @@ jobs:
           echo "Changed files:"
           echo "$CHANGED_FILES"
 
-          # Check if changes are only in config/test/
-          if echo "$CHANGED_FILES" | grep -E '^config/' | grep -v '^config/test/'; then
+          # Check if changes are only in config/test-* directories or only workflow files
+          # Exclude: config/test-*, .github/workflows/, .github/actions/
+          CONFIG_CHANGES=$(echo "$CHANGED_FILES" | grep -E '^config/' | grep -v -E '^config/test-' || true)
+          NON_CI_CHANGES=$(echo "$CHANGED_FILES" | grep -v -E '^\.github/' || true)
+
+          if [ -n "$CONFIG_CHANGES" ] && echo "$CONFIG_CHANGES" | grep -E '\.(yaml|yml)$' > /dev/null; then
             echo "skip=false" >> $GITHUB_OUTPUT
             echo "✓ Non-test config files changed, will generate reports"
+            echo "Changed configs: $CONFIG_CHANGES"
+          elif [ -z "$NON_CI_CHANGES" ]; then
+            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "✗ Only CI/workflow files changed, skipping report generation"
           else
             echo "skip=true" >> $GITHUB_OUTPUT
-            echo "✗ Only test config files changed, skipping report generation"
+            echo "✗ Only test configs or non-config files changed, skipping report generation"
           fi
 
       - name: Set up Python
@@ -118,7 +126,17 @@ jobs:
             echo "$CHANGED_FILES"
 
             # Extract config directory from changed files
-            CONFIG_DIR=$(echo "$CHANGED_FILES" | grep -E '^config/[^/]+/' | head -1 | cut -d/ -f1,2)
+            # Handle nested directories like config/test-aggregation-ci/test-ci-team1/
+            CHANGED_CONFIG=$(echo "$CHANGED_FILES" | grep -E '^config/.*\.(yaml|yml)$' | head -1)
+
+            if [ -n "$CHANGED_CONFIG" ]; then
+              # Get the directory containing the config file
+              CONFIG_DIR=$(dirname "$CHANGED_CONFIG")
+              echo "Detected config file: $CHANGED_CONFIG"
+            else
+              # If no config file found, try to extract config directory
+              CONFIG_DIR=$(echo "$CHANGED_FILES" | grep -E '^config/[^/]+/' | head -1 | cut -d/ -f1,2)
+            fi
 
             # If no team-specific config changed, use root config
             if [ -z "$CONFIG_DIR" ] || [ "$CONFIG_DIR" = "config" ]; then
