fix: disable google sheet id, fix project_key and add output_dir

--- a/config/release-service/internal-services/pr_report_config.yaml
+++ b/config/release-service/internal-services/pr_report_config.yaml
@@ -1,12 +1,13 @@
 # Project configuration (non-sensitive settings)
 # These settings can be safely version-controlled
 project:
+  github_url: "https://github.com"
   # GitHub repository settings
-  github_repo_owner: "konflux-ci"  # GitHub repository owner/organization
-  github_repo_name: "internal-services"  # GitHub repository name
+  github_repo_owner: "konflux-ci" # GitHub repository owner/organization
+  github_repo_name: "internal-services" # GitHub repository name
 
   # Google Sheets settings (optional)
-  google_spreadsheet_id: ""  # Google Spreadsheet ID for report upload
+  # google_spreadsheet_id: ""  # Google Spreadsheet ID for report upload
   # If you do not set, would upload to the default google-sheet.
   # IMPORTANT: For custom sheets in CI, grant Editor access to: cara-google-sheet-sa@wlin-438107.iam.gserviceaccount.com
 
@@ -55,3 +56,5 @@ team_members:
     email: swickers@redhat.com
   - name: seanconroy2021
     email: sconroy@redhat.com
+
+output_dir: "reports/internal-services/github"
